--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
@@ -279,5 +279,6 @@
 
 </html>
 
-<script src="./lib/jquery 1-11.min.js"></script>
+<!-- <script src="./lib/jquery 1-11.min.js"></script> -->
+<script src="https://cdn.bootcss.com/jquery/1.2.3/jquery.js"></script>
 <script src="./js/rotate.js"></script>
