--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>我的主页</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="stylesheet" href="./css/circle.css">
 </head>
