去除博客链接

--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
                     </div>
                 </div>
                 <div class="future_piece" ondragstart="return false">
-                    <span><a target="_blank" href="https://blog.csdn.net/YUHUI01">我的博客笔记</a></span>
+                    <span><a target="_blank" href="#">第二块</a></span>
                     <div class="line"></div>
                     <div class="tip">
                         CSDN博客
                     </div>
                 </div>
                 <div class="future_piece" ondragstart="return false">
-                    <span><a target="_blank" href="#">第二块</a></span>
+                    <span><a target="_blank" href="#">第三块</a></span>
                     <div class="line"></div>
                     <div class="tip">
                         小简介
