去除博客链接

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     <span><a target="_blank" href="#">第二块</a></span>
                     <div class="line"></div>
                     <div class="tip">
-                        CSDN博客
+                        小简介
                     </div>
                 </div>
                 <div class="future_piece" ondragstart="return false">
